kubernetes/manifest/fiap-video/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-extractor
  namespace: video
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-extractor
  template:
    metadata:
      labels:
        app: video-extractor
    spec:
      serviceAccountName: video-extractor-sa  # 🔹 MOVIDO PARA O LOCAL CORRETO
      containers:
        - name: video-extractor
          image: pedrogimenezsilva/fiap_tech_challenge_file_update:v1.0.2
