kubernetes/manifest/fiap-video/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-extractor-svc
  namespace: video
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"  
    service.beta.kubernetes.io/aws-load-balancer-scheme: "Internet-facing" 
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  selector:
    app: video-extractor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
